# Nodeguards-Companion

./: .gitignore  .justfile  Dockerfile.build  Dockerfile.serve  Dockerfile.utils  README.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
extension/: Cargo.toml  package-lock.json  package.json  webpack.config.js
extension/scripts/: upgradeVersion.js
extension/src/: app.rs  content.ts  import_wasm.d.ts  import_wasm.js  lib.rs  popup.ts  redirect.rs  switch.rs
extension/src/components/: mod.rs  radio_button.rs  select.rs  text_input.rs  textarea.rs
extension/src/context/: mod.rs
extension/src/features/: approve_pasted_psbt.rs  approve_psbt.rs  create_account.rs  export_xpub.rs  generate_mnemonic.rs  generate_seed.rs  home.rs  import_from_mnemonic.rs  import_from_seed.rs  import_from_xprv.rs  import_seed.rs  import_wallet.rs  input_password.rs  input_password_modal.rs  mod.rs  password.rs  password_injector.rs  settings.rs
extension/src/utils/: casts.rs  events.rs  helpers.rs  macros.rs  mod.rs  state.rs  storage.rs
extension/static/: app.css  configure.html  index.html  manifest.json  options.html  popup.html
extension/versions/: manifest_v2.json
signer/: Cargo.toml
signer/src/: lib.rs  psbt_details.rs  signer.rs  wallet.rs
signer/src/storage/: mod.rs
signer/src/utils/: base64.rs  encryption.rs  mod.rs
