[package]
name = "extension"
version = "0.2.5"
authors = [ "The elenpay Developers" ]
description = "A chrome extension/firefox add on for importing keys and signing PSBTs"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0.69"
yew-router = "0.17.0"
serde-wasm-bindgen = "0.5.0"
serde = "1.0.158"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"

  [dependencies.signer]
  path = "../signer"

  [dependencies.wasm-bindgen]
  version = "0.2.84"

  [dependencies.yew]
  version = "0.20.0"
  features = [ "csr" ]

  [dependencies.web-sys]
  version = "0.3.61"
  features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Storage",
  "Event",
  "HtmlSelectElement",
  "Navigator"
]
