[package]
name = "extension"
version = "0.2.8"
authors = [ "The elenpay Developers" ]
description = "A chrome extension/firefox add on for importing keys and signing PSBTs"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
yew-router = "0.17"
serde-wasm-bindgen = "0.5"
serde = "1.0"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

  [dependencies.signer]
  path = "../signer"

  [dependencies.wasm-bindgen]
  version = "0.2"

  [dependencies.yew]
  version = "0.20"
  features = [ "csr" ]

  [dependencies.web-sys]
  version = "0.3"
  features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Storage",
  "Event",
  "HtmlSelectElement",
  "Navigator"
]
