[package]
name = "signer"
version = "0.1.0"
authors = ["The elenpay Developers"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.69"
base64 = "0.21"
bitcoin = "0.29"
bdk = { version = "0.27.1", features = ["keys-bip39"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version="0.2.84" }
getrandom = { version = "0.2", features = ["js"] }
