[package]
name = "signer"
version = "0.1.0"
authors = ["The elenpay Developers"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.69"
base64 = "0.21"
bitcoin = "0.29"
bdk = { version = "0.27.1", default-features=false, features = ["keys-bip39", "use-esplora-async", "async-interface", "dev-getrandom-wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rust-argon2 = "1.0.0"
