[package]
name = "signer"
version = "0.1.0"
authors = ["The elenpay Developers"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bitcoin = "0.29"
bdk = { version = "0.27", default-features=false, features = ["keys-bip39", "use-esplora-async", "async-interface", "dev-getrandom-wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rust-argon2 = "1.0"
chacha20poly1305 = "0.10"
ccm = "0.5"
aes = "0.8"
aes-gcm = "0.10"

# Updated dependency of bdk
miniscript = "9.0.2"
